Fix: updated style (z-index)

--- a/basic-features/src/Components/ScrollIndicator/styles.css
+++ b/basic-features/src/Components/ScrollIndicator/styles.css
@@ -7,6 +7,7 @@
     left: 0;
     height: 0.5rem;
     width: 100%;
+    z-index: 999;
 }
 .scrollbar {
     width: 0%;
